--- a/Frontend/App.css
+++ b/Frontend/App.css
@@ -1,6 +1,3 @@
-#homeview {
-    flex: 1;
-    background-color: '#ffffff';
-    align-items: 'center';
-    justify-content: 'center';
+.harambe{
+    background-color: blue;
 }
